# sdfm

./: .gitignore  README.md  howto.ipynb  pyproject.toml
data/: uio66_unit.xyz  uio66nh2_unit.xyz
sdfm/: cluster.py  gui.py  modify.py  selection.py  template.py  termination.py  utils.py
